--- a/package.json
+++ b/package.json
@@ -5,15 +5,50 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslint app/",
+    "lint:fix": "eslint app/  --fix"
   },
   "dependencies": {
-    "expo": "~39.0.2",
+    "@expo/vector-icons": "^10.0.0",
+    "@react-native-community/async-storage": "~1.11.0",
+    "@react-native-community/datetimepicker": "2.4.0",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/picker": "1.6.0",
+    "@react-navigation/bottom-tabs": "^5.11.1",
+    "@react-navigation/drawer": "^5.10.2",
+    "@react-navigation/native": "^5.8.2",
+    "@react-navigation/stack": "^5.11.1",
+    "color": "^3.1.3",
+    "eslint": "^7.12.1",
+    "expo": "^38.0.10",
     "expo-status-bar": "~1.0.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-web": "~0.13.12"
+    "flutterwave-react-native": "^1.0.2",
+    "moment": "^2.29.1",
+    "prop-types": "^15.7.2",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-carousel-view": "^0.5.1",
+    "react-native-extended-stylesheet": "^0.12.0",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-google-places-autocomplete": "^2.1.1",
+    "react-native-paper": "^4.4.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
+    "react-native-shadow": "^1.2.2",
+    "react-native-simple-toast": "^1.1.3",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.3",
+    "react-navigation-material-bottom-tabs": "^2.3.3",
+    "react-navigation-stack": "^2.10.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
+    "watchman": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
