--- a/package.json
+++ b/package.json
@@ -30,18 +30,29 @@
     "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-carousel-view": "^0.5.1",
+    "react-native-cli": "^2.0.1",
+    "react-native-communications": "^2.2.1",
+    "react-native-elements": "^3.0.0-alpha.1",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-google-places-autocomplete": "^2.1.1",
+    "react-native-otp-verify": "^1.0.3",
     "react-native-paper": "^4.4.0",
+    "react-native-phone-call": "^1.0.9",
+    "react-native-phone-number-input": "^2.0.0",
+    "react-native-ratings": "^7.3.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-shadow": "^1.2.2",
     "react-native-simple-toast": "^1.1.3",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg-flagkit": "^0.9.5",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "9.4.0",
     "react-navigation": "^4.4.3",
+    "react-navigation-header-buttons": "^6.0.0",
     "react-navigation-material-bottom-tabs": "^2.3.3",
     "react-navigation-stack": "^2.10.1",
     "react-redux": "^7.2.2",
