--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/drawer": "^5.10.2",
     "@react-navigation/native": "^5.8.2",
     "@react-navigation/stack": "^5.11.1",
+    "axios": "^0.21.1",
     "color": "^3.1.3",
     "eslint": "^7.12.1",
     "expo": "^38.0.10",
@@ -59,6 +60,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
     "watchman": "^1.0.0"
   },
   "devDependencies": {
