--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3",
+    "redux-saga": "0.16.0",
     "redux-thunk": "^2.3.0",
     "watchman": "^1.0.0"
   },
