--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-navigation/bottom-tabs": "^5.11.1",
     "@react-navigation/drawer": "^5.10.2",
     "@react-navigation/native": "^5.8.2",
-    "@react-navigation/stack": "^5.11.1",
+    "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.1",
     "color": "^3.1.3",
     "eslint": "^7.12.1",
@@ -33,6 +33,7 @@
     "react-native-carousel-view": "^0.5.1",
     "react-native-cli": "^2.0.1",
     "react-native-communications": "^2.2.1",
+    "react-native-debugger": "^1.1.0",
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~1.6.0",
