--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "color": "^3.1.3",
     "eslint": "^7.12.1",
     "expo": "^38.0.10",
+    "expo-cli": "^3.27.4",
+    "expo-constants": "~9.1.1",
     "expo-status-bar": "~1.0.2",
     "flutterwave-react-native": "^1.0.2",
     "moment": "^2.29.1",
